syntax = "proto3";

option java_multiple_files = true;
option go_package = "./proto";

package department;

message FetchDepartmentRequest {
  string name = 1;
}

message FetchDepartmentResponse {
  string name = 1;
}

service DepartmentService {
  rpc GetDepartmentByUserName(FetchDepartmentRequest) returns (FetchDepartmentResponse);
}